<resources>
    <string name="app_name">Mal bazarı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="required">Мәжбүрий</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="advertise">Дағаза бериў</string>
    <string name="category">Бөлимлер</string>
    <string name="short_data">Қисқаша мағлиўмат жазиң</string>
    <string name="apply_ad">Дағазани жәриялаў</string>
    <string name="long_data">Толиғирақ мағлиўмат</string>
    <string name="price">Бахаси</string>
    <string name="phone_number">Телефон номер</string>
    <string name="phonee">+998334980705</string>
    <string name="city">Аймақти сайлаң</string>
    <string name="add_photo">Сүўрет қосиў</string>
    <string name="fromCamera">С камеры</string>
    <string name="fromGallery">Из галереи</string>
    <string name="todo">TODO</string>
    <string name="register">Регистрациядан өтиў</string>
    <string name="btn_login">Кириӯ</string>
    <string name="password">Пароль</string>
    <string name="phone">Телефон</string>
    <string name="login">Атиңиз</string>
    <string name="malbazar">Мал базары</string>
    <string name="btn_signup">Дизимнен өтиў</string>
    <string name="malbazari">Мал базари</string>
    <string name="search">Излеу</string>
    <string name="home">Бас бет</string>
    <string name="add">Дағаза бериў</string>
    <string name="profil">Профил</string>
    <string name="qaramal">Ӄарамал</string>
    <string name="region">Нѳкис район</string>
    <string name="tvPrice">1 300 000 swm</string>
    <string name="more_viewed">Еӊ көп кѳрилгенлер</string>
    <string name="last_added">Соӊғы ӄосылғанлар</string>
    <string name="terrain">Аимақ</string>
    <string name="point">•</string>

    <string name="number_format_exception">Телефон номерди дурис форматта киритыӊ!</string>
    <string name="password_format_exception">Парол кеминде 6 символ болиў керек!</string>
    <string name="empty_ad_list">Сизде еле дағаза жок</string>
    <string name="my_ads">Мениӊ дағазаларим</string>
    <string name="categories">Категориялар</string>
    <string name="all">Хаммеси</string>
    <string name="account">Аккаунт</string>
    <string name="userName">Атыныз</string>
    <string name="selected">Саиландылар</string>
    <string name="logOut">Аккаунтан шыгыу</string>
    <string name="aboutUs">Биз хаӄымызда</string>
    <string name="favourite">Саиланганлар</string>
    <string name="about">Биз ҳаққимизда</string>
    <string name="connect">БАЙЛАНЫС УШИН</string>
    <string name="town">Нукус</string>
    <string name="phoneToConnect">+33 447-00-69</string>
    <string name="email">info@malbazar.uz</string>
    <string name="socialIcons">Ағза Болиў</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="telegram">Telegram</string>
    <string name="tiktok">Tiktok</string>
    <string name="no_facebook_account">Фэйзбук аккаунт еле жаратилмади</string>
    <string name="no_tiktok_account">Тикток аккаунт еле жаратилмади</string>
    <string name="no_youtube_account">Ютуб аккаунт еле жаратилмади</string>
    <string name="back">Артӄа</string>
    <string name="logout">Шығыу</string>
    <string name="rationale_storage">App needs access to your storage</string>
    <string name="deleteAd">Дағазаны ошириў</string>
    <string name="addAds">Дағаза бериў</string>
    <string name="comments">Комментариялар</string>
    <string name="message">Сообщение</string>

    <string-array name="CategoryNames">
        <item>Ӄарамал</item>
        <item>Түйе</item>
        <item>Жылӄы</item>
        <item>Ешки</item>
        <item>Ӄой</item>
        <item>Мал азығы</item>
        <item>Таўиқ</item>

    </string-array>

</resources>