<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddAnimalFragment"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            app:title="@string/advertise"
            app:titleMarginStart="@dimen/margin_large"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                style="@style/TextInputLayoutDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category"
                    android:inputType="none"
                    android:padding="@dimen/margin_middle_standard"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/short_data"
                    android:maxLines="1"
                    android:padding="@dimen/margin_middle_standard" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:hint="@string/long_data"
                    android:maxLines="5"
                    android:padding="@dimen/margin_middle_standard" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/multiplePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/selectImg1"
                        layout="@layout/content_gallery_only" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_middle"
                    android:layout_marginEnd="@dimen/margin_middle"
                    >

                    <include
                        android:id="@+id/selectImg2"
                        layout="@layout/content_gallery_only" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/selectImg3"
                        layout="@layout/content_gallery_only" />
                </FrameLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrice"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="@dimen/margin_middle_standard" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/phone"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                app:prefixText="+998"
                app:prefixTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_call"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:textColorHint="@color/valueOperationColor"
                    android:maxLines="1"
                    android:padding="@dimen/margin_middle_standard"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                style="@style/TextInputLayoutDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                >

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:inputType="none"
                    android:padding="@dimen/margin_middle_standard"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApplyAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/purple_700"
                android:text="@string/apply_ad"
                android:textSize="18sp"
                android:paddingHorizontal="@dimen/margin_large"
                android:paddingVertical="@dimen/margin_middle_standard"
                app:cornerRadius="@dimen/margin_middle"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_standard"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>