<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.aboutUs.AboutUsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/about"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/connect"
        android:textColor="#9F000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/locateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConnect">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLocateIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConnect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/town"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivLocateIcon"
            app:layout_constraintTop_toTopOf="@id/ivLocateIcon" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/phoneContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locateContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tvPhoneIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_call" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/phoneToConnect"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvPhoneIcon"
            app:layout_constraintStart_toEndOf="@id/tvPhoneIcon"
            app:layout_constraintTop_toTopOf="@id/tvPhoneIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/emailContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEmailIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_email_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/email"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvPhoneIcon"
            app:layout_constraintStart_toEndOf="@id/tvPhoneIcon"
            app:layout_constraintTop_toTopOf="@id/tvPhoneIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/socialIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="40dp"
        android:text="@string/socialIcons"
        android:textColor="#9F000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContainer" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/telegramContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/socialIcons">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTelegramIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/telegram" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTelegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/telegram"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivInstagramIcon"
            app:layout_constraintStart_toEndOf="@id/ivInstagramIcon"
            app:layout_constraintTop_toTopOf="@id/ivInstagramIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/instagramContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telegramContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInstagramIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/instagram" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/instagram"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivInstagramIcon"
            app:layout_constraintStart_toEndOf="@id/ivInstagramIcon"
            app:layout_constraintTop_toTopOf="@id/ivInstagramIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/facebookContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instagramContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tvFacebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/facebook" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/facebook"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvFacebookIcon"
            app:layout_constraintStart_toEndOf="@id/tvFacebookIcon"
            app:layout_constraintTop_toTopOf="@id/tvFacebookIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/youtubeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebookContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivYoutubeIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/youtube" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/youtube"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivYoutubeIcon"
            app:layout_constraintStart_toEndOf="@id/ivYoutubeIcon"
            app:layout_constraintTop_toTopOf="@id/ivYoutubeIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tiktokContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtubeContainer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTiktokIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/tiktok" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTiktok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/tiktok"
            android:textColor="#9F000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivYoutubeIcon"
            app:layout_constraintStart_toEndOf="@id/ivYoutubeIcon"
            app:layout_constraintTop_toTopOf="@id/ivYoutubeIcon" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>